--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,6 +8,7 @@ body {
 }
 
 a {
+  border-bottom: 2px solid $contrast-color;
   text-decoration: none;
   position: relative;
 
@@ -16,16 +17,6 @@ a {
   &:active {
     display: inline-block;
     transform: translateY(0.2rem);
-  }
-  &:after {
-      border: 2px solid rgb(255, 165, 0);
-      border: 2px solid rgba(255, 165, 0, .5);
-      bottom: 0px;
-      border-style: solid;
-      content: '';
-      left: 0;
-      position: absolute;
-      width: 100%;
   }
 }
 
@@ -76,7 +67,7 @@ section {
 @media (max-width: 700px) {
   html { font-size: 12px; }
   header { margin-top: 30px; }
-  svg { width: 300px; }
+  svg { width: 150px; }
   .mid-center {
     margin-left: auto;
     margin-right: auto;
